# pai

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  config_defaults.py  config_sample.py  gsm_interface.py  ip_connection.py  ip_interface.py  main.py  mqtt_interface.py  paradox.py  paradox_crypto.py  paradox_event_map.py  paradox_ip_messages.py  paradox_message_adapters.py  paradox_messages.py  paradox_mgsp_messages.py  pushbullet_interface.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  serial_connection.py  setup.cfg  setup.py  signal_interface.py  stun.py  tox.ini  utils.py
.github/: FUNDING.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usage_question.md
.github/workflows/: build-push-dev.yml  dev.yml  gh-action-remove-and-ignore.yml  master.yml  publish_docker.yml  publish_pypi.yml  release.yml  test.yaml  test.yml
.travis/: deploy.sh
config/: defaults.py  mqtt_dash.txt  pai.conf.example  pai.service  user.py.sample
config/systemd/: pai.service  signal.service
docs/: arming.puml
hardware/: __init__.py  common.py  panel.py
hardware/evo/: __init__.py
hardware/spectra_magellan/: __init__.py
paradox/: __init__.py  config.py  event.py  exceptions.py  main.py  paradox.py
paradox/connections/: connection.py  handler.py  ip_connection.py  protocols.py  serial_connection.py
paradox/console_scripts/: ip150_connection_decrypt.py  pai_dump_memory.py  pai_run.py
paradox/data/: element_type_container.py  enums.py  memory_storage.py  model.py
paradox/hardware/: __init__.py  common.py  panel.py  parsers.py
paradox/interfaces/: __init__.py  dummy_interface.py  gsm_interface.py  homie_mqtt_interface copy.py  homie_mqtt_interface.py  interface_manager.py  ip_interface.py  mqtt_homie_interface.py  mqtt_interface.py  pushbullet_interface.py  pushover_interface.py  signal_interface.py
paradox/lib/: async.py  async_message_manager.py  crypto.py  event_filter.py  event_matcher.py  format.py  handlers.py  help.py  ps.py  stun.py  utils.py
paradox/models/: element_type_container.py
paradox/parsers/: paradox_ip_messages.py  paradox_mgsp_messages.py  status.py
tests/: __init__.py  pai.conf  test_async_queue.py  test_config.py  test_paradox.py
tests/connection/: test_serial_protocol.py
tests/data/: test_element_type_container.py
tests/encodings/: ansi.py  ar.py  charmap_generator.py  el.py  generator.py  he.py  iw.py  ru.py
tests/event/: spmg_events.py
tests/evo/: test_action.py  test_error_message.py  test_event_parsing.py  test_memory_reading.py  test_property.py  test_serial_protocol.py
tests/hardware/: test_common.py  test_encryption.py  test_panel.py
tests/interfaces/: test_gsm.py  test_homie_interface.py  test_mqtt_interface.py
tests/lib/: README.md  test_async_message_manager.py  test_crypto.py  test_utils.py  (+3 more)
(+95 files in other folders)
