[build-system]
requires = ["setuptools>=46.4.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
exclude = 'generated'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "paradox",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
