[metadata]
name = paradox-alarm-interface
version = attr: paradox.__version__
author = Jevgeni Kiski, João Paulo Barraca
author_email = yozik04@gmail.com, jpbarraca@gmail.com
description = Interface to Paradox Alarm Panels
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = paradox alarm ip150 serial home-assistant smarthome mqtt
url = https://github.com/ParadoxAlarmInterface/pai
project_urls =
    Bug Tracker = https://github.com/ParadoxAlarmInterface/pai/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = EPL

[options]
zip_safe = True
packages = find:
python_requires = >=3.8
install_requires =
    construct~=2.9.43
    argparse>=1.4.0
    python-slugify>=4.0.1
    pytz>=2021.3
    paho_mqtt>=1.5.0
    requests>=2.20.0
    pyserial-asyncio>=0.4

[options.packages.find]
exclude =
    tests
    tests.*
    config.*
    docs.*

[options.entry_points]
console_scripts =
    ip150-connection-decrypt = paradox.console_scripts.ip150_connection_decrypt:main [YAML]
    pai-service = paradox.console_scripts.pai_run:main
    pai-dump-memory = paradox.console_scripts.pai_dump_memory:main

[options.extras_require]
YAML =
    pyyaml>=5.2.0
Pushbullet =
    pushbullet.py>=0.11.0
    ws4py>=0.4.2
Pushover =
    chump>=1.6.0
Signal =
    pygobject>=3.20.0
    pydbus>=0.6.0
    gi>=1.2

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# E128 continuation line under-indented for visual indent
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    E128
noqa-require-code = True

[coverage:report]
show_missing = true

[codespell]
skip = *.ipynb
